--- a/recomend/templates/recomend/index_re.html
+++ b/recomend/templates/recomend/index_re.html
@@ -1,64 +1,55 @@
-<!DOCTYPE html>
+{% extends 'single/base.html' %}
+
 {% load static %}
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="{% static 'recomend/bootstrap4/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/ebbbbe7b35.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card text-center">
-                    <div class="card-header">
-                        한국 민속촌
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">가족끼리 왔다면??</h5>
-                        <p class="card-text">어쩌구 저쩌구 설명설명</p>
-                        <a href="/recomend/family" class="btn btn-primary">Go somewhere</a>
-                    </div>
+{% block title_block %}코스추천 페이지{% endblock %}
+{% block main_area %}
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-header">
+                    한국 민속촌
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">가족끼리 왔다면??</h5>
+                    <p class="card-text">어쩌구 저쩌구 설명설명</p>
+                    <a href="/recomend/family" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card text-center">
-                    <div class="card-header">
-                        한국 민속촌
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">연인끼리 왔다면??</h5>
-                        <p class="card-text">어쩌구 저쩌구 설명설명</p>
-                        <a href="/recomend/couple" class="btn btn-primary">Go somewhere</a>
-                    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-header">
+                    한국 민속촌
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">연인끼리 왔다면??</h5>
+                    <p class="card-text">어쩌구 저쩌구 설명설명</p>
+                    <a href="/recomend/couple" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card text-center">
-                    <div class="card-header">
-                        한국 민속촌
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">친구들끼리 왔다면??</h5>
-                        <p class="card-text">어쩌구 저쩌구 설명설명</p>
-                        <a href="/recomend/friend" class="btn btn-primary">Go somewhere</a>
-                    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <div class="card text-center">
+                <div class="card-header">
+                    한국 민속촌
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">친구들끼리 왔다면??</h5>
+                    <p class="card-text">어쩌구 저쩌구 설명설명</p>
+                    <a href="/recomend/friend" class="btn btn-primary">Go somewhere</a>
                 </div>
             </div>
         </div>
     </div>
-</body>
-</html>
+</div>
+
+{% endblock %}
